CHK-1103, CHK-1125 commons update new events (#142)
* fix: transaction service refactoring to new events

* fix: refactoring tests to new events

* fix: TransactionAddUserReceiptHandler

* fix: junit tests

* feat: tests for Closure send projection handler

* fix: add coverage for TransactionSendClosureHandler

* fix: wrong event sent in case of authorization request

* fix: send closure handler

* fix: update specifications

* fix: handle nodo response

* fix: add closure events nodo outcome

* fix: add close events nodo closePayment outcome

* fix: add check on nodo outcome for handle user receipt

* fix: add data for transaction closure failed event

* feat: add conditional closure error event creation

* fix: coverage

* fix: set ecommerce common released version

* feat: handle closed/closed_failed Nodo outcome KO

* fix: closure error event sent only for auth ok

* fix: code refactoring

* fix: code smells

* fix: closure failed retry logic