@@ -1,11 +1,11 @@
 package it.pagopa.transactions.commands.handlers;
 
-import it.pagopa.ecommerce.commons.documents.Transaction;
-import it.pagopa.ecommerce.commons.documents.*;
-import it.pagopa.ecommerce.commons.domain.*;
+import it.pagopa.ecommerce.commons.documents.v1.Transaction;
+import it.pagopa.ecommerce.commons.documents.v1.*;
+import it.pagopa.ecommerce.commons.domain.v1.PaymentNotice;
+import it.pagopa.ecommerce.commons.domain.v1.*;
 import it.pagopa.ecommerce.commons.generated.server.model.AuthorizationResultDto;
-import it.pagopa.ecommerce.commons.generated.server.model.TransactionStatusDto;
-import it.pagopa.generated.ecommerce.nodo.v2.dto.ClosePaymentResponseDto;
+import it.pagopa.ecommerce.commons.v1.TransactionTestUtils;
 import it.pagopa.generated.notifications.v1.dto.NotificationEmailResponseDto;
 import it.pagopa.generated.transactions.server.model.AddUserReceiptRequestDto;
 import it.pagopa.generated.transactions.server.model.AddUserReceiptRequestPaymentsInnerDto;
@@ -14,9 +14,9 @@ import it.pagopa.transactions.commands.TransactionAddUserReceiptCommand;
 import it.pagopa.transactions.commands.data.AddUserReceiptData;
 import it.pagopa.transactions.exceptions.AlreadyProcessedException;
 import it.pagopa.transactions.repositories.TransactionsEventStoreRepository;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -25,7 +25,7 @@ import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
 import java.time.OffsetDateTime;
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -34,11 +34,10 @@ import static org.mockito.ArgumentMatchers.argThat;
 @ExtendWith(MockitoExtension.class)
 class TransactionAddUserReceiptHandlerTest {
 
-    @InjectMocks
     private TransactionAddUserReceiptHandler updateStatusHandler;
 
     @Mock
-    private TransactionsEventStoreRepository<TransactionAddReceiptData> transactionEventStoreRepository;
+    private TransactionsEventStoreRepository<Void> transactionEventStoreRepository;
 
     @Mock
     private TransactionsEventStoreRepository<Object> eventStoreRepository;
@@ -46,7 +45,16 @@ class TransactionAddUserReceiptHandlerTest {
     @Mock
     NotificationsServiceClient notificationsServiceClient;
 
-    private TransactionId transactionId = new TransactionId(UUID.randomUUID());
+    private final TransactionId transactionId = new TransactionId(UUID.randomUUID());
+
+    @BeforeEach
+    private void initTest() {
+        updateStatusHandler = new TransactionAddUserReceiptHandler(
+                eventStoreRepository,
+                transactionEventStoreRepository,
+                notificationsServiceClient
+        );
+    }
 
     @Test
     void shouldSaveSuccessfulUpdateWithStatusClosed() {
@@ -61,8 +69,8 @@ class TransactionAddUserReceiptHandlerTest {
 
         TransactionActivated transaction = new TransactionActivated(
                 transactionId,
-                Arrays.asList(
-                        new it.pagopa.ecommerce.commons.domain.PaymentNotice(
+                List.of(
+                        new PaymentNotice(
                                 paymentToken,
                                 rptId,
                                 amount,
@@ -73,16 +81,15 @@ class TransactionAddUserReceiptHandlerTest {
                 email,
                 faultCode,
                 faultCodeString,
-                TransactionStatusDto.CLOSED,
-                Transaction.ClientId.UNKNOWN
+                Transaction.ClientId.CHECKOUT
         );
 
         TransactionActivatedEvent transactionActivatedEvent = new TransactionActivatedEvent(
                 transactionId.value().toString(),
                 new TransactionActivatedData(
                         email.value(),
-                        Arrays.asList(
-                                new it.pagopa.ecommerce.commons.documents.PaymentNotice(
+                        List.of(
+                                new it.pagopa.ecommerce.commons.documents.v1.PaymentNotice(
                                         paymentToken.value(),
                                         rptId.value(),
                                         description.value(),
@@ -92,7 +99,7 @@ class TransactionAddUserReceiptHandlerTest {
                         ),
                         faultCode,
                         faultCodeString,
-                        Transaction.ClientId.UNKNOWN
+                        Transaction.ClientId.CHECKOUT
                 )
         );
 
@@ -112,22 +119,16 @@ class TransactionAddUserReceiptHandlerTest {
                 )
         );
 
-        TransactionAuthorizationStatusUpdatedEvent authorizationStatusUpdatedEvent = new TransactionAuthorizationStatusUpdatedEvent(
+        TransactionAuthorizationCompletedEvent authorizationCompletedEvent = new TransactionAuthorizationCompletedEvent(
                 transactionId.value().toString(),
-                new TransactionAuthorizationStatusUpdateData(
-                        AuthorizationResultDto.OK,
-                        TransactionStatusDto.AUTHORIZED,
-                        "authorizationCode"
+                new TransactionAuthorizationCompletedData(
+                        "authorizationCode",
+                        AuthorizationResultDto.OK
                 )
         );
 
-        TransactionClosureSentEvent closureSentEvent = new TransactionClosureSentEvent(
-                transactionId.toString(),
-                new TransactionClosureSendData(
-                        ClosePaymentResponseDto.OutcomeEnum.OK,
-                        TransactionStatusDto.CLOSED
-                )
-        );
+        TransactionClosedEvent closureSentEvent = TransactionTestUtils
+                .transactionClosedEvent(TransactionClosureData.Outcome.OK);
 
         AddUserReceiptRequestDto addUserReceiptRequest = new AddUserReceiptRequestDto()
                 .outcome(AddUserReceiptRequestDto.OutcomeEnum.OK)
@@ -153,21 +154,15 @@ class TransactionAddUserReceiptHandlerTest {
                 addUserReceiptData
         );
 
-        TransactionAddReceiptData transactionAddReceiptData = new TransactionAddReceiptData(
-                TransactionStatusDto.NOTIFIED
-        );
-
         TransactionUserReceiptAddedEvent event = new TransactionUserReceiptAddedEvent(
-                transactionId.toString(),
-                transactionAddReceiptData
+                transactionId.toString()
         );
 
         Flux<TransactionEvent<Object>> events = ((Flux) Flux.just(
                 transactionActivatedEvent,
                 authorizationRequestedEvent,
-                authorizationStatusUpdatedEvent,
-                closureSentEvent,
-                event
+                authorizationCompletedEvent,
+                closureSentEvent
         ));
 
         /* preconditions */
@@ -183,14 +178,14 @@ class TransactionAddUserReceiptHandlerTest {
 
         Mockito.verify(transactionEventStoreRepository, Mockito.times(1)).save(
                 argThat(
-                        eventArg -> eventArg
-                                .getData().getNewTransactionStatus().equals(TransactionStatusDto.NOTIFIED)
+                        eventArg -> TransactionEventCode.TRANSACTION_USER_RECEIPT_ADDED_EVENT
+                                .equals(eventArg.getEventCode())
                 )
         );
     }
 
     @Test
-    void shouldSaveSuccessfulUpdateWithStatusClousureFailed() {
+    void shouldSaveSuccessfulUpdateWithStatusClosureFailed() {
         PaymentToken paymentToken = new PaymentToken("paymentToken");
         RptId rptId = new RptId("77777777777111111111111111111");
         TransactionDescription description = new TransactionDescription("description");
@@ -202,8 +197,8 @@ class TransactionAddUserReceiptHandlerTest {
 
         TransactionActivated transaction = new TransactionActivated(
                 transactionId,
-                Arrays.asList(
-                        new it.pagopa.ecommerce.commons.domain.PaymentNotice(
+                List.of(
+                        new PaymentNotice(
                                 paymentToken,
                                 rptId,
                                 amount,
@@ -214,16 +209,15 @@ class TransactionAddUserReceiptHandlerTest {
                 email,
                 faultCode,
                 faultCodeString,
-                TransactionStatusDto.CLOSURE_FAILED,
-                Transaction.ClientId.UNKNOWN
+                Transaction.ClientId.CHECKOUT
         );
 
         TransactionActivatedEvent transactionActivatedEvent = new TransactionActivatedEvent(
                 transactionId.value().toString(),
                 new TransactionActivatedData(
                         email.value(),
-                        Arrays.asList(
-                                new it.pagopa.ecommerce.commons.documents.PaymentNotice(
+                        List.of(
+                                new it.pagopa.ecommerce.commons.documents.v1.PaymentNotice(
                                         paymentToken.value(),
                                         rptId.value(),
                                         description.value(),
@@ -233,7 +227,7 @@ class TransactionAddUserReceiptHandlerTest {
                         ),
                         faultCode,
                         faultCodeString,
-                        Transaction.ClientId.UNKNOWN
+                        Transaction.ClientId.CHECKOUT
                 )
         );
 
@@ -253,22 +247,16 @@ class TransactionAddUserReceiptHandlerTest {
                 )
         );
 
-        TransactionAuthorizationStatusUpdatedEvent authorizationStatusUpdatedEvent = new TransactionAuthorizationStatusUpdatedEvent(
+        TransactionAuthorizationCompletedEvent authorizationCompletedEvent = new TransactionAuthorizationCompletedEvent(
                 transactionId.value().toString(),
-                new TransactionAuthorizationStatusUpdateData(
-                        AuthorizationResultDto.OK,
-                        TransactionStatusDto.AUTHORIZED,
-                        "authorizationCode"
+                new TransactionAuthorizationCompletedData(
+                        "authorizationCode",
+                        AuthorizationResultDto.OK
                 )
         );
 
-        TransactionClosureSentEvent closureSentEvent = new TransactionClosureSentEvent(
-                transactionId.toString(),
-                new TransactionClosureSendData(
-                        ClosePaymentResponseDto.OutcomeEnum.OK,
-                        TransactionStatusDto.CLOSED
-                )
-        );
+        TransactionClosedEvent closureSentEvent = TransactionTestUtils
+                .transactionClosedEvent(TransactionClosureData.Outcome.OK);
 
         AddUserReceiptRequestDto addUserReceiptRequest = new AddUserReceiptRequestDto()
                 .outcome(AddUserReceiptRequestDto.OutcomeEnum.OK)
@@ -294,21 +282,15 @@ class TransactionAddUserReceiptHandlerTest {
                 addUserReceiptData
         );
 
-        TransactionAddReceiptData transactionAddReceiptData = new TransactionAddReceiptData(
-                TransactionStatusDto.NOTIFIED
-        );
-
         TransactionUserReceiptAddedEvent event = new TransactionUserReceiptAddedEvent(
-                transactionId.toString(),
-                transactionAddReceiptData
+                transactionId.toString()
         );
 
         Flux<TransactionEvent<Object>> events = ((Flux) Flux.just(
                 transactionActivatedEvent,
                 authorizationRequestedEvent,
-                authorizationStatusUpdatedEvent,
-                closureSentEvent,
-                event
+                authorizationCompletedEvent,
+                closureSentEvent
         ));
 
         /* preconditions */
@@ -324,8 +306,8 @@ class TransactionAddUserReceiptHandlerTest {
 
         Mockito.verify(transactionEventStoreRepository, Mockito.times(1)).save(
                 argThat(
-                        eventArg -> eventArg
-                                .getData().getNewTransactionStatus().equals(TransactionStatusDto.NOTIFIED)
+                        eventArg -> TransactionEventCode.TRANSACTION_USER_RECEIPT_ADDED_EVENT
+                                .equals(eventArg.getEventCode())
                 )
         );
     }
@@ -343,8 +325,8 @@ class TransactionAddUserReceiptHandlerTest {
 
         TransactionActivated transaction = new TransactionActivated(
                 transactionId,
-                Arrays.asList(
-                        new it.pagopa.ecommerce.commons.domain.PaymentNotice(
+                List.of(
+                        new PaymentNotice(
                                 paymentToken,
                                 rptId,
                                 amount,
@@ -355,16 +337,15 @@ class TransactionAddUserReceiptHandlerTest {
                 email,
                 faultCode,
                 faultCodeString,
-                TransactionStatusDto.CLOSED,
-                Transaction.ClientId.UNKNOWN
+                Transaction.ClientId.CHECKOUT
         );
 
         TransactionActivatedEvent transactionActivatedEvent = new TransactionActivatedEvent(
                 transactionId.value().toString(),
                 new TransactionActivatedData(
                         email.value(),
-                        Arrays.asList(
-                                new it.pagopa.ecommerce.commons.documents.PaymentNotice(
+                        List.of(
+                                new it.pagopa.ecommerce.commons.documents.v1.PaymentNotice(
                                         paymentToken.value(),
                                         rptId.value(),
                                         description.value(),
@@ -374,7 +355,7 @@ class TransactionAddUserReceiptHandlerTest {
                         ),
                         faultCode,
                         faultCodeString,
-                        Transaction.ClientId.UNKNOWN
+                        Transaction.ClientId.CHECKOUT
                 )
         );
 
@@ -394,22 +375,16 @@ class TransactionAddUserReceiptHandlerTest {
                 )
         );
 
-        TransactionAuthorizationStatusUpdatedEvent authorizationStatusUpdatedEvent = new TransactionAuthorizationStatusUpdatedEvent(
+        TransactionAuthorizationCompletedEvent authorizationCompletedEvent = new TransactionAuthorizationCompletedEvent(
                 transactionId.value().toString(),
-                new TransactionAuthorizationStatusUpdateData(
-                        AuthorizationResultDto.OK,
-                        TransactionStatusDto.AUTHORIZED,
-                        "authorizationCode"
+                new TransactionAuthorizationCompletedData(
+                        "authorizationCode",
+                        AuthorizationResultDto.OK
                 )
         );
 
-        TransactionClosureSentEvent closureSentEvent = new TransactionClosureSentEvent(
-                transactionId.toString(),
-                new TransactionClosureSendData(
-                        ClosePaymentResponseDto.OutcomeEnum.OK,
-                        TransactionStatusDto.CLOSED
-                )
-        );
+        TransactionClosedEvent closureSentEvent = TransactionTestUtils
+                .transactionClosedEvent(TransactionClosureData.Outcome.OK);
 
         AddUserReceiptRequestDto addUserReceiptRequest = new AddUserReceiptRequestDto()
                 .outcome(AddUserReceiptRequestDto.OutcomeEnum.KO)
@@ -435,21 +410,15 @@ class TransactionAddUserReceiptHandlerTest {
                 addUserReceiptData
         );
 
-        TransactionAddReceiptData transactionAddReceiptData = new TransactionAddReceiptData(
-                TransactionStatusDto.NOTIFIED
-        );
-
         TransactionUserReceiptAddedEvent event = new TransactionUserReceiptAddedEvent(
-                transactionId.toString(),
-                transactionAddReceiptData
+                transactionId.toString()
         );
 
         Flux<TransactionEvent<Object>> events = ((Flux) Flux.just(
                 transactionActivatedEvent,
                 authorizationRequestedEvent,
-                authorizationStatusUpdatedEvent,
-                closureSentEvent,
-                event
+                authorizationCompletedEvent,
+                closureSentEvent
         ));
 
         /* preconditions */
@@ -465,8 +434,8 @@ class TransactionAddUserReceiptHandlerTest {
 
         Mockito.verify(transactionEventStoreRepository, Mockito.times(1)).save(
                 argThat(
-                        eventArg -> eventArg
-                                .getData().getNewTransactionStatus().equals(TransactionStatusDto.NOTIFIED_FAILED)
+                        eventArg -> TransactionEventCode.TRANSACTION_USER_RECEIPT_ADDED_EVENT
+                                .equals(eventArg.getEventCode())
                 )
         );
     }
@@ -484,8 +453,8 @@ class TransactionAddUserReceiptHandlerTest {
 
         TransactionActivated transaction = new TransactionActivated(
                 transactionId,
-                Arrays.asList(
-                        new it.pagopa.ecommerce.commons.domain.PaymentNotice(
+                List.of(
+                        new PaymentNotice(
                                 paymentToken,
                                 rptId,
                                 amount,
@@ -496,16 +465,15 @@ class TransactionAddUserReceiptHandlerTest {
                 email,
                 faultCode,
                 faultCodeString,
-                TransactionStatusDto.ACTIVATED,
-                Transaction.ClientId.UNKNOWN
+                Transaction.ClientId.CHECKOUT
         );
 
         TransactionActivatedEvent transactionActivatedEvent = new TransactionActivatedEvent(
                 transactionId.value().toString(),
                 new TransactionActivatedData(
                         email.value(),
-                        Arrays.asList(
-                                new it.pagopa.ecommerce.commons.documents.PaymentNotice(
+                        List.of(
+                                new it.pagopa.ecommerce.commons.documents.v1.PaymentNotice(
                                         paymentToken.value(),
                                         rptId.value(),
                                         description.value(),
@@ -515,7 +483,7 @@ class TransactionAddUserReceiptHandlerTest {
                         ),
                         faultCode,
                         faultCodeString,
-                        Transaction.ClientId.UNKNOWN
+                        Transaction.ClientId.CHECKOUT
                 )
         );
 
@@ -535,12 +503,11 @@ class TransactionAddUserReceiptHandlerTest {
                 )
         );
 
-        TransactionAuthorizationStatusUpdatedEvent authorizationStatusUpdatedEvent = new TransactionAuthorizationStatusUpdatedEvent(
+        TransactionAuthorizationCompletedEvent authorizationCompletedEvent = new TransactionAuthorizationCompletedEvent(
                 transactionId.value().toString(),
-                new TransactionAuthorizationStatusUpdateData(
-                        AuthorizationResultDto.OK,
-                        TransactionStatusDto.AUTHORIZED,
-                        "authorizationCode"
+                new TransactionAuthorizationCompletedData(
+                        "authorizationCode",
+                        AuthorizationResultDto.OK
                 )
         );
 
@@ -569,7 +536,123 @@ class TransactionAddUserReceiptHandlerTest {
         );
 
         Flux<TransactionEvent<Object>> events = ((Flux) Flux
-                .just(transactionActivatedEvent, authorizationRequestedEvent, authorizationStatusUpdatedEvent));
+                .just(transactionActivatedEvent, authorizationRequestedEvent, authorizationCompletedEvent));
+
+        /* preconditions */
+        Mockito.when(eventStoreRepository.findByTransactionId(transactionId.value().toString())).thenReturn(events);
+
+        /* test */
+        StepVerifier.create(updateStatusHandler.handle(requestStatusCommand))
+                .expectErrorMatches(error -> error instanceof AlreadyProcessedException)
+                .verify();
+
+        Mockito.verify(transactionEventStoreRepository, Mockito.times(0)).save(any());
+    }
+
+    @Test
+    void shouldRejectTransactionWithClosureOutcomeKO() {
+        PaymentToken paymentToken = new PaymentToken("paymentToken");
+        RptId rptId = new RptId("77777777777111111111111111111");
+        TransactionDescription description = new TransactionDescription("description");
+        TransactionAmount amount = new TransactionAmount(100);
+        Email email = new Email("foo@example.com");
+        String faultCode = "faultCode";
+        String faultCodeString = "faultCodeString";
+        PaymentContextCode nullPaymentContextCode = new PaymentContextCode(null);
+
+        TransactionActivated transaction = new TransactionActivated(
+                transactionId,
+                List.of(
+                        new PaymentNotice(
+                                paymentToken,
+                                rptId,
+                                amount,
+                                description,
+                                nullPaymentContextCode
+                        )
+                ),
+                email,
+                faultCode,
+                faultCodeString,
+                Transaction.ClientId.CHECKOUT
+        );
+
+        TransactionActivatedEvent transactionActivatedEvent = new TransactionActivatedEvent(
+                transactionId.value().toString(),
+                new TransactionActivatedData(
+                        email.value(),
+                        List.of(
+                                new it.pagopa.ecommerce.commons.documents.v1.PaymentNotice(
+                                        paymentToken.value(),
+                                        rptId.value(),
+                                        description.value(),
+                                        amount.value(),
+                                        nullPaymentContextCode.value()
+                                )
+                        ),
+                        faultCode,
+                        faultCodeString,
+                        Transaction.ClientId.CHECKOUT
+                )
+        );
+
+        TransactionAuthorizationRequestedEvent authorizationRequestedEvent = new TransactionAuthorizationRequestedEvent(
+                transactionId.value().toString(),
+                new TransactionAuthorizationRequestData(
+                        amount.value(),
+                        10,
+                        "paymentInstrumentId",
+                        "pspId",
+                        "paymentTypeCode",
+                        "brokerName",
+                        "pspChannelCode",
+                        "paymentMethodName",
+                        "pspBusinessName",
+                        "authorizationRequestId"
+                )
+        );
+
+        TransactionAuthorizationCompletedEvent authorizationCompletedEvent = new TransactionAuthorizationCompletedEvent(
+                transactionId.value().toString(),
+                new TransactionAuthorizationCompletedData(
+                        "authorizationCode",
+                        AuthorizationResultDto.OK
+                )
+        );
+        TransactionClosedEvent closureSentEvent = TransactionTestUtils
+                .transactionClosedEvent(TransactionClosureData.Outcome.KO);
+
+        AddUserReceiptRequestDto addUserReceiptRequest = new AddUserReceiptRequestDto()
+                .outcome(AddUserReceiptRequestDto.OutcomeEnum.OK)
+                .paymentDate(OffsetDateTime.now())
+                .addPaymentsItem(
+                        new AddUserReceiptRequestPaymentsInnerDto()
+                                .paymentToken("paymentToken")
+                                .companyName("companyName")
+                                .creditorReferenceId("creditorReferenceId")
+                                .description("description")
+                                .debtor("debtor")
+                                .fiscalCode("fiscalCode")
+                                .officeName("officeName")
+                );
+
+        AddUserReceiptData addUserReceiptData = new AddUserReceiptData(
+                transaction,
+                addUserReceiptRequest
+        );
+
+        TransactionAddUserReceiptCommand requestStatusCommand = new TransactionAddUserReceiptCommand(
+                transaction.getPaymentNotices().get(0).rptId(),
+                addUserReceiptData
+        );
+
+        Flux<TransactionEvent<Object>> events = ((Flux) Flux
+                .just(
+                        transactionActivatedEvent,
+                        authorizationRequestedEvent,
+                        authorizationCompletedEvent,
+                        closureSentEvent
+                ));
 
         /* preconditions */
         Mockito.when(eventStoreRepository.findByTransactionId(transactionId.value().toString())).thenReturn(events);
