@@ -6,13 +6,13 @@ import com.azure.core.http.rest.Response;
 import com.azure.core.util.BinaryData;
 import com.azure.storage.queue.QueueAsyncClient;
 import com.azure.storage.queue.models.SendMessageResult;
-import it.pagopa.ecommerce.commons.documents.Transaction;
-import it.pagopa.ecommerce.commons.documents.TransactionActivatedData;
-import it.pagopa.ecommerce.commons.documents.TransactionActivatedEvent;
-import it.pagopa.ecommerce.commons.documents.TransactionActivationRequestedData;
-import it.pagopa.ecommerce.commons.domain.IdempotencyKey;
-import it.pagopa.ecommerce.commons.domain.RptId;
-import it.pagopa.ecommerce.commons.domain.TransactionEventCode;
+import it.pagopa.ecommerce.commons.documents.v1.PaymentNotice;
+import it.pagopa.ecommerce.commons.documents.v1.Transaction;
+import it.pagopa.ecommerce.commons.documents.v1.TransactionActivatedData;
+import it.pagopa.ecommerce.commons.documents.v1.TransactionActivatedEvent;
+import it.pagopa.ecommerce.commons.domain.v1.IdempotencyKey;
+import it.pagopa.ecommerce.commons.domain.v1.RptId;
+import it.pagopa.ecommerce.commons.domain.v1.TransactionEventCode;
 import it.pagopa.ecommerce.commons.repositories.PaymentRequestInfo;
 import it.pagopa.ecommerce.commons.repositories.PaymentRequestsInfoRepository;
 import it.pagopa.generated.transactions.server.model.NewTransactionRequestDto;
@@ -35,7 +35,7 @@ import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 import reactor.util.function.Tuple2;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -51,7 +51,7 @@ class TransactionInitializerHandlerTest {
     private final TransactionsEventStoreRepository<TransactionActivatedData> transactionEventActivatedStoreRepository = Mockito
             .mock(TransactionsEventStoreRepository.class);
 
-    private final TransactionsEventStoreRepository<TransactionActivationRequestedData> transactionEventActivationRequestedStoreRepository = Mockito
+    private final TransactionsEventStoreRepository<Object> eventStoreRepository = Mockito
             .mock(TransactionsEventStoreRepository.class);
 
     private final NodoOperations nodoOperations = Mockito.mock(NodoOperations.class);
@@ -62,6 +62,7 @@ class TransactionInitializerHandlerTest {
 
     private final TransactionActivateHandler handler = new TransactionActivateHandler(
             paymentRequestInfoRepository,
+            eventStoreRepository,
             transactionEventActivatedStoreRepository,
             nodoOperations,
             jwtTokenUtils,
@@ -78,7 +79,7 @@ class TransactionInitializerHandlerTest {
         String paName = "paName";
         String paTaxcode = "77777777777";
         String description = "Description";
-        Integer amount = Integer.valueOf(1000);
+        Integer amount = 1000;
 
         NewTransactionRequestDto requestDto = new NewTransactionRequestDto();
         PaymentNoticeInfoDto paymentNoticeInfoDto = new PaymentNoticeInfoDto();
@@ -89,7 +90,7 @@ class TransactionInitializerHandlerTest {
         TransactionActivateCommand command = new TransactionActivateCommand(
                 rptId,
                 requestDto,
-                Transaction.ClientId.UNKNOWN
+                Transaction.ClientId.CHECKOUT
         );
 
         PaymentRequestInfo paymentRequestInfoCached = new PaymentRequestInfo(
@@ -109,8 +110,8 @@ class TransactionInitializerHandlerTest {
         transactionActivatedEvent.setEventCode(TransactionEventCode.TRANSACTION_ACTIVATED_EVENT);
         TransactionActivatedData transactionActivatedData = new TransactionActivatedData();
         transactionActivatedData.setPaymentNotices(
-                Arrays.asList(
-                        new it.pagopa.ecommerce.commons.documents.PaymentNotice(
+                List.of(
+                        new PaymentNotice(
                                 paymentToken,
                                 rptId.value(),
                                 null,
@@ -121,7 +122,7 @@ class TransactionInitializerHandlerTest {
         );
         transactionActivatedEvent.setData(transactionActivatedData);
 
-        /** preconditions */
+        /* preconditions */
         Mockito.when(paymentRequestInfoRepository.findById(rptId))
                 .thenReturn(Optional.of(paymentRequestInfoCached));
         Mockito.when(transactionEventActivatedStoreRepository.save(any()))
@@ -143,7 +144,7 @@ class TransactionInitializerHandlerTest {
         Tuple2<Mono<TransactionActivatedEvent>, String> response = handler
                 .handle(command).block();
 
-        /** asserts */
+        /* asserts */
         Mockito.verify(paymentRequestInfoRepository, Mockito.times(1)).findById(rptId);
         assertNotNull(paymentRequestInfoCached.id());
     }
@@ -157,7 +158,7 @@ class TransactionInitializerHandlerTest {
         String paName = "paName";
         String paTaxcode = "77777777777";
         String description = "Description";
-        Integer amount = Integer.valueOf(1000);
+        Integer amount = 1000;
 
         NewTransactionRequestDto requestDto = new NewTransactionRequestDto();
         PaymentNoticeInfoDto paymentNoticeInfoDto = new PaymentNoticeInfoDto();
@@ -168,7 +169,7 @@ class TransactionInitializerHandlerTest {
         TransactionActivateCommand command = new TransactionActivateCommand(
                 rptId,
                 requestDto,
-                Transaction.ClientId.UNKNOWN
+                Transaction.ClientId.CHECKOUT
         );
 
         PaymentRequestInfo paymentRequestInfoCached = new PaymentRequestInfo(
@@ -188,8 +189,8 @@ class TransactionInitializerHandlerTest {
         transactionActivatedEvent.setEventCode(TransactionEventCode.TRANSACTION_ACTIVATED_EVENT);
         TransactionActivatedData transactionActivatedData = new TransactionActivatedData();
         transactionActivatedData.setPaymentNotices(
-                Arrays.asList(
-                        new it.pagopa.ecommerce.commons.documents.PaymentNotice(
+                List.of(
+                        new PaymentNotice(
                                 paymentToken,
                                 rptId.value(),
                                 null,
@@ -200,7 +201,7 @@ class TransactionInitializerHandlerTest {
         );
         transactionActivatedEvent.setData(transactionActivatedData);
 
-        /** preconditions */
+        /* preconditions */
         Mockito.when(paymentRequestInfoRepository.findById(rptId))
                 .thenReturn(Optional.of(paymentRequestInfoCached));
         Mockito.when(transactionEventActivatedStoreRepository.save(any()))
@@ -218,7 +219,7 @@ class TransactionInitializerHandlerTest {
         Mockito.when(jwtTokenUtils.generateToken(any()))
                 .thenReturn(Mono.error(new JWTTokenGenerationException()));
         ReflectionTestUtils.setField(handler, "nodoParallelRequests", 5);
-        /** run test */
+        /* run test */
         StepVerifier
                 .create(handler.handle(command))
                 .expectErrorMatches(exception -> exception instanceof JWTTokenGenerationException);
@@ -258,7 +259,7 @@ class TransactionInitializerHandlerTest {
 
         differentTransactionsProjection.setRptId(new RptId(TEST_RPTID));
 
-        assertFalse(transactionsProjection.equals(differentTransactionsProjection));
+        assertNotEquals(transactionsProjection, differentTransactionsProjection);
         assertEquals(
                 Boolean.TRUE,
                 transactionsProjection.getData().equals(differentTransactionsProjection.getData())
@@ -272,7 +273,7 @@ class TransactionInitializerHandlerTest {
         String paName = "paName";
         String paTaxcode = "77777777777";
         String description = "Description";
-        Integer amount = Integer.valueOf(1000);
+        Integer amount = 1000;
 
         NewTransactionRequestDto requestDto = new NewTransactionRequestDto();
         PaymentNoticeInfoDto paymentNoticeInfoDto = new PaymentNoticeInfoDto();
@@ -283,7 +284,7 @@ class TransactionInitializerHandlerTest {
         TransactionActivateCommand command = new TransactionActivateCommand(
                 rptId,
                 requestDto,
-                Transaction.ClientId.UNKNOWN
+                Transaction.ClientId.CHECKOUT
         );
 
         PaymentRequestInfo paymentRequestInfoCached = new PaymentRequestInfo(
